--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL=https://staging.example.com
-EXPO_PUBLIC_API_KEY=abc123
+EXPO_PUBLIC_API_URL="https://cis.kku.ac.th/api/classroom"
+EXPO_PUBLIC_API_KEY="API_KEY"
